# A-Simple-CLI-LLM

./: README.md  __init__.py  main.py  pyproject.toml
backend/: __init__.py  server.py
frontend/: __init__.py  chat.py
utils/: __init__.py  api_client.py  ui.py
